# bloomfilter-blocked

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  bloomfilter-blocked.cabal  cabal.project
.github/: CODEOWNERS
.github/workflows/: ci.yml  documentation.yml
bench/: bench-plot.hs  bloomfilter-bench.hs
plots/: fpr-vs-bits.gnuplot  fpr-vs-fpr.blocked.gnuplot.data  fpr-vs-fpr.classic.gnuplot.data  fpr-vs-fpr.gnuplot  fpr.gnuplot
scripts/: test-cabal-docspec.sh
src/Data/BloomFilter/: Hash.hs
tests/: fpr-calc.hs
xxhash/src/Data/Digest/: XXH3.hs
xxhash/src/Data/Digest/XXH3/: FFI.hs
xxhash/tests/: xxhash-tests.hs
